Fixing logo path

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 	<script id="badge" type="text/x-jsrender">
 		<li>
 			<div class="top">
-				<img src="logo_cmyk_white2.png">
+				<img src="img/logo_cmyk_white2.png">
 				<div class="right">{{:type}}</div>
 			</div>
 			<p class="name">
