Changing default value to 1

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	<![endif]-->
 	<script>
 		function parseSecond(val) {
-			var result = "Not found",
+			var result = "1",
 			tmp = [];
 			var items = location.search.substr(1).split("&");
 			for (var index = 0; index < items.length; index++) {
