Renaming column field

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			$.each( data, function( key, val ) {
 
 				items.push( {
-					twitter: val["gsx$whatisyourtwitterhandle"]["$t"],
+					twitter: val["gsx$twitterhandle"]["$t"],
 					type: val["gsx$tickettype"]["$t"],
 					firstname: val["gsx$firstname"]["$t"],
 					lastname: val["gsx$lastname"]["$t"]
