Adding some instructions

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <form>
                   <div class="form-group">
                     <label for="logoSrc">Logo src</label>
-                    <input type="text" class="form-control" id="logoSrc" placeholder="http://upload.wikimedia.org/wikipedia/commons/7/73/Meetup_Logo_2015.png" name="logo">
+                    <input type="text" class="form-control" id="logoSrc" placeholder="http://upload.wikimedia.org/wikipedia/commons/7/73/Meetup_Logo_2015.png" name="logo" value="http://hhkaos.github.io/badge-generator/img/logo.png">
                   </div>
                   <div class="form-group">
                     <label for="exampleInputPassword1">Header BG Color</label>
@@ -100,6 +100,24 @@
                   <!--<p><hr><a href="" id="pdf" target="_blank" style="display:none">Open document</a></p>-->
                 </div>
               </article>
+            </div>
+            <div class="row" style="margin-bottom: 5em">
+
+              <div class="col-md-12">
+                <h1>Where do I get the Spreadsheet ID?</h1>
+                <ol class="task-list">
+                  <li><p>Open <a href="https://docs.google.com/spreadsheets/d/13J7bCeY26AaUGgW_2gOyLH5aulZFKQM_zwxMhfUJTGQ/edit?usp=sharing">this spreadsheet</a></p></li>
+                  <li><p>File -&gt; Make a copy</p></li>
+                  <li><p>Fill the spreadsheet with real data. It should look like this:<br><br>
+                    <a href="https://github.com/hhkaos/badge-generator/blob/gh-pages/img/excel.png" target="_blank"><img src="https://github.com/hhkaos/badge-generator/raw/gh-pages/img/excel.png" style="max-width:50%;"></a></p></li>
+                    <li><p>Next step is make this file Public; File -&gt; Publish to the web -&gt; Publish<br><br>
+                    <a href="https://github.com/hhkaos/badge-generator/blob/gh-pages/img/publish.png" target="_blank"><img src="https://github.com/hhkaos/badge-generator/raw/gh-pages/img/publish.png" style="max-width:50%;"></a></p></li>
+                    </p></li>
+                    <li><p>Extract the Spreadsheet ID from the URL, for example if your URL is this one:
+                      <a href="https://docs.google.com/spreadsheets/d/13J7bCeY26AaUGgW_2gOyLH5aulZFKQM_zwxMhfUJTGQ/pubhtml">https://docs.google.com/spreadsheets/d/13J7bCeY26AaUGgW_2gOyLH5aulZFKQM_zwxMhfUJTGQ/pubhtml</a> the id is <strong>13J7bCeY26AaUGgW_2gOyLH5aulZFKQM_zwxMhfUJTGQ</strong></p></li>
+                    <li>That's all, now you have it, place it inside the "Spreadsheet ID" input file</li>
+                      </ol>
+              </div>
             </div>
           </section>
         </div>
