Adding a video tutorial

--- a/index.html
+++ b/index.html
@@ -103,20 +103,33 @@
             </div>
             <div class="row" style="margin-bottom: 5em">
 
-              <div class="col-md-12">
-                <h1>Where do I get the Spreadsheet ID?</h1>
+              <div class="col-md-6">
+                <h1>What is the Spreadsheet ID?</h1>
                 <ol class="task-list">
                   <li><p>Open <a href="https://docs.google.com/spreadsheets/d/13J7bCeY26AaUGgW_2gOyLH5aulZFKQM_zwxMhfUJTGQ/edit?usp=sharing">this spreadsheet</a></p></li>
                   <li><p>File -&gt; Make a copy</p></li>
                   <li><p>Fill the spreadsheet with real data. It should look like this:<br><br>
-                    <a href="https://github.com/hhkaos/badge-generator/blob/gh-pages/img/excel.png" target="_blank"><img src="https://github.com/hhkaos/badge-generator/raw/gh-pages/img/excel.png" style="max-width:50%;"></a></p></li>
-                    <li><p>Next step is make this file Public; File -&gt; Publish to the web -&gt; Publish<br><br>
-                    <a href="https://github.com/hhkaos/badge-generator/blob/gh-pages/img/publish.png" target="_blank"><img src="https://github.com/hhkaos/badge-generator/raw/gh-pages/img/publish.png" style="max-width:50%;"></a></p></li>
-                    </p></li>
-                    <li><p>Extract the Spreadsheet ID from the URL, for example if your URL is this one:
-                      <a href="https://docs.google.com/spreadsheets/d/13J7bCeY26AaUGgW_2gOyLH5aulZFKQM_zwxMhfUJTGQ/pubhtml">https://docs.google.com/spreadsheets/d/13J7bCeY26AaUGgW_2gOyLH5aulZFKQM_zwxMhfUJTGQ/pubhtml</a> the id is <strong>13J7bCeY26AaUGgW_2gOyLH5aulZFKQM_zwxMhfUJTGQ</strong></p></li>
-                    <li>That's all, now you have it, place it inside the "Spreadsheet ID" input file</li>
-                      </ol>
+                    <div class="text-center">
+                      <a href="https://github.com/hhkaos/badge-generator/blob/gh-pages/img/excel.png" target="_blank"><img src="https://github.com/hhkaos/badge-generator/raw/gh-pages/img/excel.png" style="max-width:200px;"></a></p>
+                    </div>
+                  </li>
+                  <li><p>Next step is make this file Public; File -&gt; Publish to the web -&gt; Publish<br><br>
+                  <div class="text-center">
+                    <a href="https://github.com/hhkaos/badge-generator/blob/gh-pages/img/publish.png" target="_blank"><img src="https://github.com/hhkaos/badge-generator/raw/gh-pages/img/publish.png" style="max-width:200px"></a>
+                  </div>
+                  </p></li>
+                  </p></li>
+                  <li><p>Extract the Spreadsheet ID from the URL. It should look like this: <strong>13J7bCeY26AaUGgW_2gOyLH5aulZFKQM_zwxMhfUJTGQ</strong></p></li>
+                  <li>That's all, now you have it, place it inside the "Spreadsheet ID" input file</li>
+                </ol>
+              </div>
+              <div class="col-md-6">
+                <h1 class="text-center ">Video tutorial</h1>
+                <div class="text-center well">
+                  
+                  <iframe style="width:90%; margin:10px 0;display:inline-block" height="315" src="https://www.youtube.com/embed/z6gyy6Brbns" frameborder="0" allowfullscreen></iframe>
+                  <p>Length: 2 min, 17 secs</p>
+                </div>
               </div>
             </div>
           </section>
