Adding github ribbon

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
         <script src="js/bootstrap-colorpicker.js"></script>
         <script src="js/docs.js"></script>
+        <a href="https://github.com/hhkaos/badge-generator"><img style="position: absolute; top: 0; right: 0; border: 0; width: 149px; height: 149px;" src="http://aral.github.com/fork-me-on-github-retina-ribbons/right-graphite@2x.png" alt="Fork me on GitHub"></a>
       </body>
 
       </html>
