--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
                     </div>
                   </div>
 
+                  <div class="form-group inline">
+                    <label for="width">Width (cm)</label>
+                    <input type="text" class="form-control" id="width" name="width" placeholder="10.5" value="10.5">
+                  </div>
+
+                  <div class="form-group inline">
+                    <label for="height">Height (cm)</label>
+                    <input type="text" class="form-control" id="height" name="height" placeholder="7.5" value="7.5">
+                  </div>
 
                   <div class="form-group">
                     <label for="spreadsheet">Spreadsheet ID</label>
@@ -79,16 +88,22 @@
               <article class="col-md-6">
                 <ul id="list">
                   <li style="width:100%">
-                    <div class="top bgHeader headerTxtColor">
-                      <img src="img/logo.png" class="logo">
-                      <div class="right">Ticket type</div>
-                    </div>
-                    <p class="name">
-                      <span class="firstname">Firstname</span>
-                      <span class="lastname">Lastname</span>
-                    </p>
-                    <div class="bottom bgFooter footerTxtColor">
-                      <div class="right">@twitterhandle</div>
+                    <div class="table" style="width: 10.5cm;height: 7.5cm; margin:0 auto">
+                      <div class="top bgHeader headerTxtColor table-row">
+                        <div class="table-cell">
+                          <img src="img/logo.png" class="logo">
+                          <div class="type">Ticket type</div>
+                        </div>
+                      </div>
+                      <div class="name table-row">
+                        <div class="table-cell">
+                          <span class="firstname">Firstname</span>
+                          <span class="lastname">Lastname</span>
+                        </div>
+                      </div>
+                      <div class="bottom bgFooter footerTxtColor table-row">
+                        <div class="table-cell" style="text-align:right">@twitterhandle</div>
+                      </div>
                     </div>
                   </li>
                 </ul>
