Lastname and bgfooter width the same color

--- a/bagde-generator.html
+++ b/bagde-generator.html
@@ -69,6 +69,7 @@
 	  	
 	  	if(bgFooter != 1){
 	  		$(".bottom").css("background-color", "#" + bgFooter);
+	  		$(".lastname").css("color","#" + bgFooter);
 	  	}
 
 	  	if(footerTxtColor != 1){
