minor fixes (broken imgs and https)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Badge Generator</title>
-  <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/bootstrap-colorpicker.min.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet" />
@@ -18,9 +18,7 @@
   </style>
 
   <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
+    
       </head>
 
       <body>
@@ -36,11 +34,11 @@
                 <form>
                   <div class="form-group">
                     <label for="logoSrc">Logo src</label>
-                    <input type="text" class="form-control" id="logoSrc" placeholder="http://upload.wikimedia.org/wikipedia/commons/7/73/Meetup_Logo_2015.png" name="logo" value="http://hhkaos.github.io/badge-generator/img/logo.png">
+                    <input type="text" class="form-control" id="logoSrc" placeholder="https://upload.wikimedia.org/wikipedia/commons/7/73/Meetup_Logo_2015.png" name="logo" value="https://hhkaos.github.io/badge-generator/img/logo.png">
                   </div>
                   <div class="form-group">
                     <label>BG image</label>
-                    <input type="text" class="form-control" id="bgSrc" placeholder="http://upload.wikimedia.org/wikipedia/commons/7/73/Meetup_Logo_2015.png" name="bgSrc" value="http://localhost:9095/img/background.png">
+                    <input type="text" class="form-control" id="bgSrc" placeholder="https://upload.wikimedia.org/wikipedia/commons/7/73/Meetup_Logo_2015.png" name="bgSrc" value="https://localhost:9095/img/background.png">
                   </div>
                   <div class="form-group">
                     <label>Header BG Color</label>
@@ -178,7 +176,7 @@
           });
 
         </script>
-        <a href="https://github.com/hhkaos/badge-generator"><img style="position: absolute; top: 0; right: 0; border: 0; width: 149px; height: 149px;" src="http://aral.github.com/fork-me-on-github-retina-ribbons/right-graphite@2x.png" alt="Fork me on GitHub"></a>
+        <a href="https://github.com/hhkaos/badge-generator"><img style="position: absolute; top: 0; right: 0; border: 0; width: 149px; height: 149px;" src="https://github.com/Esri/arcgis-js-vscode-snippets" alt="Fork me on GitHub"></a>
       </body>
 
       </html>
